# elrond-runtime

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
base_runtime/: CMakeLists.txt
base_runtime/include/: elrond_base_runtime_types.hpp  elrond_runtime.hpp
base_runtime/include/application/: ApplicationEvents.hpp  BaseApplication.hpp  InstanceCtx.hpp  ModuleFactoryPool.hpp  ModuleFactoryPool.ipp
base_runtime/include/interface/: Application.hpp
base_runtime/include/runtime/: FutureHolder.hpp  FutureHolder.ipp  NullArguments.hpp
base_runtime/src/application/: ApplicationEvents.cpp  BaseApplication.cpp  InstanceCtx.cpp  ModuleFactoryPool.cpp
base_runtime/src/runtime/: NullArguments.cpp
elrond_cli/: CMakeLists.txt
elrond_cli/include/: CliApplication.hpp  CliConsoleAdapter.hpp  CliConsoleStreamAdapter.hpp  ConfigInterface.hpp  JsonConfig.hpp  ProgArguments.hpp  Signal.hpp
elrond_cli/src/: CliApplication.cpp  CliConsoleAdapter.cpp  CliConsoleStreamAdapter.cpp  JsonConfig.cpp  ProgArguments.cpp  Signal.cpp  main.cpp
runtime/: CMakeLists.txt
runtime/include/: elrond_runtime.hpp  elrond_runtime_types.hpp
runtime/include/application/: ApplicationEvents.hpp  AsyncLoopTask.hpp  BaseApplication.hpp  Context.hpp  ExternalFactoryAdapter.hpp  FactoryAdapter.hpp  InternalFactoryAdapter.hpp  InternalFactoryAdapter.ipp  ModuleFactoryPool.hpp  ModuleFactoryPool.ipp  ModuleInstance.hpp  RuntimeApplication.hpp
runtime/include/interface/: Application.hpp  ConsoleAdapter.hpp  FactoryAdapter.hpp  LoopTask.hpp  ModuleInstance.hpp
runtime/src/: elrond_runtime.cpp
runtime/src/application/: ApplicationEvents.cpp  AsyncLoopTask.cpp  BaseApplication.cpp  Context.cpp  ExternalFactoryAdapter.cpp  FactoryAdapter.cpp  ModuleFactoryPool.cpp  ModuleInstance.cpp  RuntimeApplication.cpp
runtime/test/: CMakeLists.txt
runtime/test/application/: AsyncLoopTask.test.cpp  BaseApplication.test.cpp  FactoryAdapter.test.cpp  ModuleFactoryPool.test.cpp  ModuleInstance.test.cpp  RuntimeApplication.test.cpp
runtime/test/misc/: CMakeLists.txt
test/: CMakeLists.txt
test/base_runtime/application/: BaseApplication.test.cpp  InstanceCtx.test.cpp  ModuleFactoryPool.test.cpp
test/base_runtime/runtime/: NullArguments.test.cpp
